almost finished the third page I still have to fix the little overflowing on the last page

--- a/assets/stylesheets/product.scss
+++ b/assets/stylesheets/product.scss
@@ -87,19 +87,20 @@ a { text-decoration: none;}
     color: $color-black;
 
     @media  (max-width: 364px)  {
-        background-color: $color-almostwhite;
-        z-index: 1;
+        // background-color: $color-almostwhite;
+        // z-index: 1;
     }
 
     @media (min-width: 1024px) {
-        background-color: #f5f5f5;
-        z-index: 1;
+        // background-color: #f5f5f5;
+        // z-index: 1;
     }
 }
 
+
 .small-title {
     @include title;
-    @include medium-font;
+    @include small-font;
     line-height: 30px;
 }
 
@@ -114,10 +115,31 @@ a { text-decoration: none;}
     padding-left: 10px;
 }
 
+#display-tablet-none {
+    @media (min-width: 100px) and (max-width: 1023px)  {
+        display: none;
+    }
+}
+
+#display-desktop-none {
+    @media (min-width:1024px) {
+        display: none;
+    }
+}
+
+.padding-none {
+    padding: 0;
+}
+
 .link-text {
     @include medium-font;
     @include link;
     margin-bottom: 30px;
+}
+
+.text-counter {
+    @include smallest-font;
+     color: $color-gray;
 }
 
 .flex {
@@ -134,6 +156,10 @@ a { text-decoration: none;}
 
 .wrap {
     flex-wrap: wrap;
+}
+
+.w-fit {
+    width: fit-content;
 }
 
 .w-100 {
@@ -226,7 +252,7 @@ a { text-decoration: none;}
 .aside-menu {
     position: sticky;
     top: 0;
-    width: 15%;
+    width: calc(15% - 16px);
     background-color: white;
     @media (min-width: 100px) and (max-width: 1023px)  {
         display: none;
@@ -235,8 +261,7 @@ a { text-decoration: none;}
 
 main {
     margin: 0 auto;
-    z-index: 1;
-    width: 70%;
+    width: calc(70% - 60px);
     @media (min-width: 100px) and (max-width: 1023px)  {
         width: 100%;
     }
@@ -277,6 +302,7 @@ main {
     border: 2px solid white;
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 .icon-container {
@@ -408,6 +434,75 @@ main {
       position: fixed;
       top: 0;
   }
+
+  .main-container {
+    @media (min-width: 100px) and (max-width: 1023px)  {
+        margin-top: 32px;
+        width: 100%;
+        height: 100%;
+        flex-direction: row;
+         }
+        .product-images-container {
+            @media (min-width: 100px) and (max-width: 1023px)  {
+            width: 25%;
+            height: 100%;
+            flex-direction: column;
+        }
+            .product-image-child {
+                @media (min-width: 100px) and (max-width: 1023px)  {
+                width: 100%;
+                height: 100%;
+                }
+            }
+        }
+
+        .product-description-child-1 { 
+            @media (min-width: 100px) and (max-width: 1023px)  {
+            width: 75%;
+            height: 100%;
+            }
+            .pd-1 {
+                @media (min-width: 100px) and (max-width: 1023px)  { 
+                display: initial;
+                position: relative;
+                width: 100%;
+                height: 45%;
+
+                .product-cost {
+                 position: absolute;
+                 top: 10px;
+                 right: 15px;   
+                }
+
+                .number-image-page {
+                    position: absolute;
+                    bottom: 10px;
+                    left: 50%;
+                }
+                }
+              }
+            .pd-2 {
+                @media (min-width: 100px) and (max-width: 1023px)  {
+                height: 15%;
+                }
+              }
+            .pd-3 {
+                @media (min-width: 100px) and (max-width: 1023px)  {
+                height: 10%;
+                }
+              }
+            .pd-4 {
+                @media (min-width: 100px) and (max-width: 1023px)  {
+                height: 20%;
+                }
+            }
+            .pd-5 {
+                @media (min-width: 100px) and (max-width: 1023px)  {
+                height: 10%;
+                }
+              }
+        }
+    }
   
   #aside-left {
       left: 0;
@@ -422,8 +517,38 @@ main {
   }
 
   .product-description-child-1 {
+      background-color: $color-almostwhite;
       width: 35%;
       
+    .pd,
+    .cart-child {
+        border: $color-white 2px solid;
+    }
+
+    .pd {
+        @media (min-width: 100px) and (max-width: 1023px)  {
+            padding: 0;
+        }
+    }
+
+    .add-cart-child-1 {
+        width: 10%;
+    }
+
+    .add-cart-child-2 {
+        width: 90%;
+    }
+
+    .pd,
+    .details-child
+     {
+        padding: 10px;
+    }
+
+    #padding-lr-text {
+        padding: 0 10px
+    }
+
       .pd-1 {
           display: none;
         }
@@ -431,18 +556,26 @@ main {
           height: 25%;
         }
       .pd-3 {
-          height: 15%;
+          height: 10%;
         }
       .pd-4 {
-          height: 45%;
+          height: 50%;
         }
       .pd-5 {
-          height: 15%;
+          height: 10%;
         }
   }
 
+  .product-description-child-2,
+  .pd-1 {
+    width: 65%;
+    background: url(../images/generic-shoe2.jpg) no-repeat 100%;
+    background-size: cover;
+    
+  }
+
   .product-description-child-2 {
-      width: 65%;
-      background: url(../images/generic-shoe2.jpg) no-repeat 100%;
-      background-size: cover;
+      @media (min-width: 100px) and (max-width: 1023px)  {
+        display: none;
+    }
   }
